--- a/src/App.css
+++ b/src/App.css
@@ -37,13 +37,15 @@ div.EachRecipe{
   margin: 0 auto;
   align-items: center;
   padding: 20px;
+  color: #fff;
+  /* color: #fff; */
   border-radius: 40px;
   justify-content: space-evenly;
   width: 80%;
 }
 div.desleft a, a.goback{
   text-decoration: none;
-  color: #000;
+  color: #fff;
   /* background-color: aqua; */
   padding: 20px 0 30px;
 }
@@ -55,7 +57,7 @@ div.recipes div.eachFood{
   background-color: #ff33445c;
   align-items: center;
   display: flex;
-  
+  color: #fff;
   justify-content: space-between;
   padding: 10px;
   border-radius: 10px;
@@ -63,20 +65,45 @@ div.recipes div.eachFood{
 div.Pagination{
   display: flex;
   justify-content: space-between;
-  width: 7%;
+  width: 30%;
   margin: 0 auto;
   align-items: center;
+  /* background-color: #fff; */
+
   /* align-items: center; */
   /* background-color: aqua; */
   padding: 10px;
   /* margin: 20px 0; */
 }
 div.searching{
+  /* background-color: #000; */
   padding: 10px 0;
 }
-div.Pagination a{
+div.Pagination button{
   text-decoration: none;
+  padding: 10px 20px;
+  background-color: #fff;
+  border: 0;
+  border-radius: 5px;
+  cursor: pointer;
+  /* background-color: red; */
   color: #000;
+  transition: all 300ms;
+}
+div.Pagination button:disabled{
+  cursor: not-allowed;
+  /* outline: none; */
+}
+div.Pagination button:hover{
+  color: #fff;
+  background-color: rgba(255, 51, 68, 0.5);
+}
+div.Pagination span{
+  color: #fff;
+}
+span b{
+  background-color: rgba(255, 51, 68, 0.36);
+  padding: 0 10px;
 }
 .active{
   padding: 10px;
@@ -95,11 +122,15 @@ form.search{
   display: flex;
   /* background-color: aqua; */
   margin: 0 auto;
-  width: 25%;
+  width: 30%;
+  /* background-color: #fff; */
   justify-content: space-between;
 }
 form.search input{
   padding: 10px;
+  border: 1px solid #fff;
+  color: #fff;
+  border-radius: 5px;
   width: 15em;
   outline: none;
 }
@@ -111,12 +142,98 @@ div.load{
   justify-content: center;
 
 }
+.load p{
+  color: #fff;
+  /* font-size: 1.5em; */
+}
+.loader {
+  width: 50px;
+  --b: 8px; 
+  aspect-ratio: 1;
+  border-radius: 50%;
+  padding: 1px;
+  background: conic-gradient(#0000 10%,#f03355) content-box;
+  -webkit-mask:
+    repeating-conic-gradient(#0000 0deg,#000 1deg 20deg,#0000 21deg 36deg),
+    radial-gradient(farthest-side,#0000 calc(100% - var(--b) - 1px),#000 calc(100% - var(--b)));
+  -webkit-mask-composite: destination-in;
+          mask-composite: intersect;
+  animation:l4 1s infinite steps(10);
+}
+@keyframes l4 {to{transform: rotate(1turn)}}
 form.search button{
   cursor: pointer;
-  padding: 5px;
+  padding: 5px 10px;
   border: 1px solid rgba(255, 51, 68, 0.36);
   border-radius: 5px;
+  color: #fff;
   background-color: rgba(255, 51, 68, 0.36);
+  transition: all 300ms;
+}
+form.search button:hover{
+  background-color: #fff;
+  color: #000;
+}
+@media (max-width: 400px){
+  body{
+    font-size: 16px;
+  }
+  div.recipes{
+    grid-template-columns: repeat(1,1fr);
+  }
+  div.recipes div{
+    width: 100%;
+  }
+  div.recipes img{
+    width: 6em;
+    height: 6em;
+  }
+  form.search{
+    width: 90%;
+    gap: 2em;
+    flex-direction: column;
+  }
+  div.Pagination{
+    width: 90%;
+  }
+  div.EachRecipe{
+    flex-direction: column;
+    width: 95%;
+  }
+  div.EachRecipe div{
+    width: 100%;
+  }
+  div.eachFood div{
+    width: 60%;
+  }
+  form.search input{
+    width: 100%;
+  }
+  div.load p{
+    font-size: 1em;
+  }
+}
+@media (max-width: 900px) {
+  div.recipes{
+    grid-template-columns: repeat(2,1fr);
+  }
+  form.search{
+    width: 70%;
+  }
+  div.Pagination{
+    width: 60%;
+  }
+  div.eachFood div{
+    width: 60%;
+  }
+  div.recipes img{
+    width: 7em;
+    height: 7em;
+  }
+  div.EachRecipe{
+    /* flex-direction: column; */
+    width: 100%;
+  }
 }
 /* .App {
   text-align: center;
