--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@import "tailwindcss";
+/* @tailwind base; */
+/* @import "tailwindcss/preflight"; */
+
+/* @tailwind components; */
+/* @import "utilities"; */
+
+body{
+  background-color: #000;
 }
 /* body {
   margin: 0;
