--- a/src/App.css
+++ b/src/App.css
@@ -213,7 +213,7 @@ form.search button:hover{
     font-size: 1em;
   }
 }
-@media (max-width: 900px) {
+@media ((min-width:500px) and (max-width: 900px)) {
   div.recipes{
     grid-template-columns: repeat(2,1fr);
   }
