--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-@import "tailwindcss";
+/* @import "tailwindcss"; */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* .no-pico div.recipes img{
+  all: unset;
+  width: 4em;
+  height: 4em;
+  border-radius: 50%;
+} */
 /* @tailwind base; */
 /* @import "tailwindcss/preflight"; */
 
 /* @tailwind components; */
 /* @import "utilities"; */
 
-body{
+/* body{
   background-color: #000;
-}
+} */
 /* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
