--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,5 +11,5 @@ $primary-color:#000;
 //     border-radius: 50%;
 //   }
 body{
-    background-color: $primary-color;
+    background-color: $primary-color !important;
 }
